added game history, made ai play better, now you can load any board, added game db